# spinit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/spinit/: README.md  __init__.py  api.py  assignment.py  bond_graph.py  config.py  features.py  geometry.py  graph_ops.py  hybridization.py  magnetic_moments.py  motifs.py  reporting.py  scoring.py  topology.py
src/spinit/chemistry/: __init__.py  features.py  hybridization.py  motifs.py
src/spinit/graph/: __init__.py  bond_graph.py  geometry.py  graph_ops.py  topology.py
src/spinit/output/: __init__.py  reporting.py
src/spinit/seeding/: __init__.py  assignment.py
tests/: test_api_smoke.py
